--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
   </script>
 
   <header>
-    Bitcoin Watchlist
+    <h2>Bitcoin Watchlist</h2>
   </header>
 
   <main>
-    <select property="base"></select>
+    <input type="hidden" value="[onchange(base, currency)]" property="_change" />
+    <input type="hidden" property="spot" />
+    <input type="hidden" property="checked_time" />
+    <input type="hidden" property="checked_date" />
 
-    <select property="currency"></select>
+    Data as of:<br>
+    [checked_time]<br>
+    on [checked_date]<br>
+
+    <h3>Summary</h3>
+    1.00 <select property="base"></select> = [spot] <select property="currency"></select>
   </main>
-
+<hr>    <div id="myChart"></div>
   <footer>
     <div class="fb-comments" data-href="https://mycaule.github.io/portfolio" data-numposts="5"></div>
 
@@ -50,8 +58,6 @@
   </footer>
 
   <script src="https://dev.mavo.io/dist/mavo.es5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.3.1/voca.min.js"></script>
-  <script src="app.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.4/moment-with-locales.min.js"></script>
+  <script src="dist/app.js"></script>
 </body>
 </html>
