--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Bitcoin Watchlist" />
   <meta property="og:description" content="Bitcoin Watchlist" />
   <meta property="og:image" content="https://dummyimage.com/600x400/000/fff" />
-  <link rel="stylesheet" href="https://dev.mavo.io/dist/mavo.css">
+  <!-- <link rel="stylesheet" href="https://dev.mavo.io/dist/mavo.css"> -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -27,7 +27,10 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <main>
+  <div class="w3-container w3-black w3-teal">
+    <h3>Watchlist</h3>
+  </div>
+  <div class="w3-container w3-light-grey">
     <input type="hidden" property="spot" />
     <input type="hidden" property="checked_time" />
     <input type="hidden" property="checked_date" />
@@ -36,104 +39,114 @@
     <input type="hidden" property="min52w" />
     <input type="hidden" property="max52w" />
 
-    <h2>Insights</h2>
-    <table>
-      <thead>
-        <td>Total Value ([currency])</td>
-        <td>Day Gain ([currency])</td>
-        <td>Total Gain ([currency])</td>
-        <td>Data as of:</td>
-      </thead>
-      <tr>
-        <td>[sum(position1 * spot)]</td>
-        <td>[sum(position1 * (spot - price1))]</td>
-        <td>[sum(position1 * (spot - price1))]</td>
-        <td>
+    <div class="w3-row">
+      <div class="w3-container w3-twothird">
+        <table class="w3-table">
+          <tr>
+            <th>Total Value ([currency])</th>
+            <th>Day Gain ([currency])</th>
+            <th>Total Gain ([currency])</th>
+          </tr>
+          <tr>
+            <td>[sum(position1 * spot)]</td>
+            <td>[sum(position1 * (spot - price1))]</td>
+            <td>[sum(position1 * (spot - price1))]</td>
+          </tr>
+        </table>
+      </div>
+      <div class="w3-container w3-third">
+        <blockquote class="w3-panel w3-leftbar w3-light-grey">
+          Data as of:<br>
           [checked_time]<br>
           on [checked_date]
-        </td>
-      </tr>
-    </table>
-
-    <div class="w3-bar w3-black">
-      <button class="w3-bar-item w3-button">Summary</button>
-      <button class="w3-bar-item w3-button">Holdings</button>
-      <button class="w3-bar-item w3-button">Edit</button>
+        </blockquote>
+      </div>
     </div>
 
-    <div id="Summary" class="section">
-      <table>
-        <thead>
-          <td>Symbol</td>
-          <td>Last Price<br>Time (ET)</td>
-          <td>2 Day Performance</td>
-          <td>%Change<br>Day Change</td>
-          <td>Volume<br>30 Day Average</td>
-          <td>52 Week Range</td>
-        </thead>
-        <tr>
-          <td><select id="bases" property="base" mv-default="BTC"></select><br><select id="currencies" property="currency" mv-default="EUR"></select></td>
-          <td>[spot]<br>[checked_date]</td>
-          <td>
-            <div id="graphPerf2d"></div>
-          </td>
-          <td>[(close1d/open1d-1)*100]%<br>[close1d-open1d]</td>
-          <td>/<br>/</td>
-          <td>
-            <meter property="range52w" min="[min52w]" value="[spot]" max="[max52w]" datatype="number"></meter>
-          </td>
-        </tr>
-      </table>
+    <div class="w3-row">
+      <div class="w3-container w3-twothird">
+        <div class="w3-bar w3-black">
+          <button class="w3-bar-item w3-button">Summary</button>
+          <button class="w3-bar-item w3-button">Holdings</button>
+          <button class="w3-bar-item w3-button">Edit</button>
+        </div>
+
+        <div id="Summary" class="section">
+          <table class="w3-table">
+            <tr>
+              <th>Symbol</th>
+              <th>Last Price<br>Time (ET)</th>
+              <th>2 Day Performance</th>
+              <th>%Change<br>Day Change</th>
+              <th>Volume<br>30 Day Average</th>
+              <th>52 Week Range</th>
+            </tr>
+            <tr>
+              <td><select id="bases" property="base" mv-default="BTC"></select><br><select id="currencies" property="currency" mv-default="EUR"></select></td>
+              <td>[spot]<br>[checked_date]</td>
+              <td>
+                <div id="graphPerf2d"></div>
+              </td>
+              <td>[(close1d/open1d-1)*100]%<br>[close1d-open1d]</td>
+              <td>/<br>/</td>
+              <td>
+                <meter property="range52w" min="[min52w]" value="[spot]" max="[max52w]" datatype="number"></meter>
+              </td>
+            </tr>
+          </table>
+        </div>
+
+        <div id="Holdings" class="section" style="display:none">
+          <table class="w3-table">
+            <tr>
+              <th>Symbol</th>
+              <th>LastPrice<br>Time (ET)</th>
+              <th>% Change<br>Net Change</th>
+              <th>Day Gain<br>([currency])</th>
+              <th>Cost<br>Avg Price</th>
+              <th>Net Gain<br>([currency])</th>
+              <th>Value<br>([currency])</th>
+            </tr>
+            <tr>
+              <td>...</td>
+              <td>...</td>
+              <td>...</td>
+              <td>...</td>
+              <td>...</td>
+              <td>...</td>
+              <td>...</td>
+            </tr>
+          </table>
+        </div>
+
+        <div id="Edit" class="section" style="display:none">
+          <table class="w3-table">
+            <tr>
+              <th>Symbol</th>
+              <th>Date</th>
+              <th>Position</th>
+              <th>Price</th>
+            </tr>
+            <tr property="lot" mv-mode="edit" mv-multiple>
+              <td><span property="base1" mv-edit="#bases" mv-mode="edit" mv-default="BTC"></span></td>
+              <td><time mv-mode="edit" property="date1" mv-default="2016-12-16"></time></td>
+              <td><input type="text" property="position1" mv-default="1"/></td>
+              <td><input type="text" min="300" property="price1" mv-default="[spot]"/></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="w3-container w3-third">
+        <h4>Watchlist News</h4>
+        ...
+
+        <h4>Benchmarks</h4>
+        ...
+      </div>
     </div>
+  </div>
 
-    <div id="Holdings" class="section" style="display:none">
-      <table>
-        <thead>
-          <td>Symbol</td>
-          <td>LastPrice<br>Time (ET)</td>
-          <td>% Change<br>Net Change</td>
-          <td>Day Gain<br>([currency])</td>
-          <td>Cost<br>Avg Price</td>
-          <td>Net Gain<br>([currency])</td>
-          <td>Value<br>([currency])</td>
-        </thead>
-        <tr>
-          <td>...</td>
-          <td>...</td>
-          <td>...</td>
-          <td>...</td>
-          <td>...</td>
-          <td>...</td>
-          <td>...</td>
-        </tr>
-      </table>
-    </div>
-
-    <div id="Edit" class="section" style="display:none">
-      <table>
-        <thead>
-          <td>Symbol</td>
-          <td>Date</td>
-          <td>Position</td>
-          <td>Price</td>
-        </thead>
-        <tr property="lot" mv-mode="edit" mv-multiple>
-          <td><span property="base1" mv-edit="#bases" mv-mode="edit" mv-default="BTC"></span></td>
-          <td><time mv-mode="edit" property="date1" mv-default="2016-12-16"></time></td>
-          <td><input type="text" property="position1" mv-default="1"/></td>
-          <td><input type="text" min="300" property="price1" mv-default="[spot]"/></td>
-        </tr>
-      </table>
-    </div>
-
-    <h2>News</h2>
-    ...
-
-    <h2>Benchmarks</h2>
-    ...
-  </main>
-
-  <footer>
+  <div class="w3-container w3-dark-grey w3-teal w3-center">
     <div>
       <div class="fb-like" data-href="https://mycaule.github.io/portfolio" data-layout="button_count" data-action="recommend" data-size="large" data-show-faces="true" data-share="true"></div>
     </div>
@@ -142,7 +155,7 @@
     </div>
 
     &copy; 2018 Michel Hua
-  </footer>
+  </div>
 
   <script src="https://dev.mavo.io/dist/mavo.es5.min.js"></script>
   <script src="dist/app.js"></script>
