--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Bitcoin Watchlist" />
   <meta property="og:description" content="Bitcoin Watchlist" />
   <meta property="og:image" content="https://dummyimage.com/600x400/000/fff" />
-  <!-- <link rel="stylesheet" href="https://dev.mavo.io/dist/mavo.css"> -->
+  <link rel="stylesheet" href="https://dev.mavo.io/dist/mavo.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -91,6 +91,7 @@
               <td>/<br>/</td>
               <td>
                 <meter property="range52w" min="[min52w]" value="[spot]" max="[max52w]" datatype="number"></meter>
+                <br>[min52w] - [max52w]
               </td>
             </tr>
           </table>
