--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 
 <body mv-app mv-storage="local" mv-autosave="0" mv-bar="none">
+  <meta property="spot" />
+  <meta property="checked_time" />
+  <meta property="checked_date" />
+  <meta property="open1d" />
+  <meta property="min52w" />
+  <meta property="max52w" />
+  <meta property="vol1d" />
+  <meta property="avg_vol30d" />
+
   <div id="fb-root"></div>
   <script>
     (function(d, s, id) {
@@ -31,14 +40,6 @@
     <h3>Watchlist</h3>
   </div>
   <div class="w3-container w3-light-grey">
-    <input type="hidden" property="spot" />
-    <input type="hidden" property="checked_time" />
-    <input type="hidden" property="checked_date" />
-    <input type="hidden" property="open1d" />
-    <input type="hidden" property="close1d" />
-    <input type="hidden" property="min52w" />
-    <input type="hidden" property="max52w" />
-
     <div class="w3-row">
       <div class="w3-container w3-twothird">
         <table class="w3-table">
@@ -49,7 +50,7 @@
           </tr>
           <tr>
             <td>[sum(position1 * spot)]</td>
-            <td>[sum(position1 * (spot - price1))]</td>
+            <td>[sum(position1 * (spot - open1d))]</td>
             <td>[sum(position1 * (spot - price1))]</td>
           </tr>
         </table>
@@ -83,12 +84,12 @@
             </tr>
             <tr>
               <td><select id="bases" property="base" mv-default="BTC"></select><br><select id="currencies" property="currency" mv-default="EUR"></select></td>
-              <td>[spot]<br>[checked_date]</td>
+              <td><b>[spot]</b><br>[checked_date]</td>
               <td>
                 <div id="graphPerf2d"></div>
               </td>
-              <td>[(close1d/open1d-1)*100]%<br>[close1d-open1d]</td>
-              <td>/<br>/</td>
+              <td><b>[(spot/open1d-1)*100]%</b><br>[spot-open1d]</td>
+              <td><b>[vol1d]</b><br>[avg_vol30d]</td>
               <td>
                 <meter property="range52w" min="[min52w]" value="[spot]" max="[max52w]" datatype="number"></meter>
                 <br>[min52w] - [max52w]
