--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <table class="w3-table">
             <tr>
               <th>Symbol</th>
-              <th>Last Price<br>Time (ET)</th>
+              <th>Last Price<br>Time</th>
               <th>2 Day Performance</th>
               <th>%Change<br>Day Change</th>
               <th>Volume<br>30 Day Average</th>
