Add watchlist news

--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
       </div>
       <div class="w3-container w3-third">
         <h4>Watchlist News</h4>
-        ...
-
+        <div id="feed5"></div>
+        <div id="feed10" class="more-news" style="display:none"></div>
+        <br>
+        <div id="toggleFeed">Show more watchlist news</div>
         <h4>Benchmarks</h4>
         ...
       </div>
@@ -164,6 +166,7 @@
   </div>
 
   <script src="https://dev.mavo.io/dist/mavo.es5.min.js"></script>
+  <script type="text/javascript" src="https://rss2json.com/gfapi.js"></script>
   <script src="dist/app.js"></script>
 </body>
 </html>
