--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           </tr>
         </table>
       </div>
-      <div class="column col-2">
+      <div class="column col-2 hide-md">
         <blockquote>
-          Data as of:<br>
+          <b>Last update</b><br>
           [checked_time]<br>
-          on [checked_date]
+          [checked_date]
         </blockquote>
       </div>
     </div>
@@ -176,7 +176,7 @@
           </table>
         </div>
       </div>
-      <div class="column col-4">
+      <div class="column col-4 hide-lg">
         <p>
           <h4>Watchlist News</h4>
           <div id="feed5"></div>
